--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_healthindex.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_healthindex.xml
@@ -17,17 +17,16 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <LinearLayout
+            <RelativeLayout
                 android:gravity="center"
-                android:layout_marginTop="20dp"
+                android:layout_margin="10dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:ignore="MissingConstraints"
-                >
+                android:layout_height="wrap_content">
 
                 <ImageView
-                    android:layout_marginLeft="20dp"
+                    android:id="@+id/GoBack"
+                    android:layout_alignParentLeft="true"
                     app:srcCompat="@drawable/icon_back"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
@@ -37,12 +36,13 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="35dp"
+                    android:layout_centerInParent="true"
                     android:fontFamily="sans-serif-black"
-                    android:text="Chỉ số sức khỏe"
+                    android:gravity="center_horizontal"
+                    android:text="Chỉ Số Sức Khỏe"
                     android:textColor="@color/black"
                     android:textSize="25dp" />
-            </LinearLayout>
+            </RelativeLayout>
 
             <LinearLayout
                 tools:ignore="MissingConstraints"
@@ -79,13 +79,13 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_margin="10dp"
                             android:text="Thông tin về cơ bản"
                             android:textColor="@color/black"
                             android:textSize="18dp" />
 
                         <ImageView
-                            android:layout_marginTop="6dp"
+                            android:layout_margin="10dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
 
@@ -96,47 +96,50 @@
                             android:layout_height="wrap_content">
 
                         </LinearLayout>
+
                         <EditText
                             android:id="@+id/txt_chieucao"
-                            android:paddingLeft="20dp"
                             android:layout_width="match_parent"
-                            android:layout_height="40dp"
-                            android:layout_marginTop="20dp"
+                            android:layout_height="48dp"
+                            android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
                             android:hint="Chiều cao"
-                            android:inputType="textPersonName" />
+                            android:inputType="textPersonName"
+                            android:paddingLeft="20dp" />
 
                         <EditText
                             android:id="@+id/txt_cannang"
-                            android:paddingLeft="20dp"
                             android:layout_width="match_parent"
-                            android:layout_height="40dp"
-                            android:layout_marginTop="20dp"
+                            android:layout_height="48dp"
+                            android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
                             android:hint="Cân nặng"
-                            android:inputType="textPersonName" />
+                            android:inputType="textPersonName"
+                            android:paddingLeft="20dp" />
+
                         <EditText
                             android:id="@+id/txt_huyetap"
-                            android:paddingLeft="20dp"
                             android:layout_width="match_parent"
-                            android:layout_height="40dp"
-                            android:layout_marginTop="20dp"
+                            android:layout_height="48dp"
+                            android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
                             android:hint="Huyết áp"
-                            android:inputType="textPersonName" />
+                            android:inputType="textPersonName"
+                            android:paddingLeft="20dp" />
+
                         <EditText
                             android:id="@+id/txt_nhiptim"
-                            android:paddingLeft="20dp"
                             android:layout_width="match_parent"
-                            android:layout_height="40dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_height="48dp"
+                            android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
                             android:hint="Nhịp tim"
-                            android:inputType="textPersonName" />
+                            android:inputType="textPersonName"
+                            android:paddingLeft="20dp" />
 
                     </LinearLayout>
                     <LinearLayout
-                        android:layout_marginTop="20dp"
+                        android:layout_margin="10dp"
                         android:gravity="center"
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
@@ -146,7 +149,7 @@
                             android:textColor="#fff"
                             android:layout_width="250dp"
                             android:layout_height="wrap_content"
-                            android:text="Bạn có khỏe không"
+                            android:text="Bạn có khỏe không?"
                             android:textSize="20dp"
 
                             />
@@ -161,14 +164,14 @@
                             android:id="@+id/txt_hienthi"
                             android:layout_width="match_parent"
                             android:layout_height="200dp"
-                            android:layout_marginTop="20dp"
+                            android:layout_margin="20dp"
                             android:background="@drawable/custom_medical1"
                             android:hint="Hiển thị kết quả BMI"
                             android:inputType="textPersonName" />
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_marginTop="20dp"
+                        android:layout_margin="10dp"
                         android:gravity="center"
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
@@ -179,20 +182,11 @@
                             android:layout_width="250dp"
                             android:layout_height="wrap_content"
                             android:text="Nhận tư vấn ngay"
-                            android:textSize="20dp"
-
-                            />
+                            android:textSize="20dp" />
                     </LinearLayout>
-
-
-
                 </LinearLayout>
-
             </ScrollView>
-
         </LinearLayout>
-
-
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
