--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_homeuser.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_homeuser.xml
@@ -51,15 +51,7 @@
             <LinearLayout
                 tools:ignore="MissingConstraints"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_marginLeft="20dp"
-                    android:fontFamily="sans-serif-black"
-                    android:textSize="16dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Xin chào, Nguyễn Văn Hà" />
-            </LinearLayout>
+                android:layout_height="wrap_content"></LinearLayout>
         </LinearLayout>
 <!--phần đầu-->
         <LinearLayout
@@ -68,6 +60,14 @@
             android:layout_marginTop="14dp"
             android:background="@drawable/custom_user"
             android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:fontFamily="sans-serif-black"
+                android:text="Xin chào, Nguyễn Văn Hà"
+                android:textSize="16dp" />
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -163,9 +163,7 @@
                                 android:layout_marginLeft="10dp"
                                 app:srcCompat="@drawable/icon_medicine"
                                 android:layout_width="50dp"
-                                android:layout_height="50dp"
-
-                                />
+                                android:layout_height="50dp" />
 
                             <LinearLayout
                                 android:orientation="vertical"
@@ -280,6 +278,100 @@
                             android:textSize="25dp" />
 
                         <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginTop="10dp"
+                            android:layout_weight="9"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_margin="10dp"
+                                android:layout_weight="3"
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp">
+
+                                <ImageView
+                                    android:layout_weight="1"
+                                    android:layout_width="120dp"
+                                    android:layout_height="120dp"
+                                    android:layout_gravity="center"
+                                    app:srcCompat="@drawable/hososuckhoe" />
+
+
+                                <ImageView
+                                    android:layout_weight="1"
+                                    android:layout_width="120dp"
+                                    android:layout_height="120dp"
+                                    android:layout_gravity="center"
+                                    app:srcCompat="@drawable/khaibaoyte" />
+
+                                <ImageView
+                                    android:layout_weight="1"
+                                    android:layout_width="120dp"
+                                    android:layout_height="120dp"
+                                    android:layout_gravity="center"
+                                    app:srcCompat="@drawable/chungnhantiemchung" />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_margin="10dp"
+                                android:layout_weight="3"
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp">
+
+                                <ImageView
+                                    android:layout_weight="1"
+                                    android:layout_width="120dp"
+                                    android:layout_height="120dp"
+                                    android:layout_gravity="center"
+                                    app:srcCompat="@drawable/baohiemyte" />
+
+                                <ImageView
+                                    android:layout_weight="1"
+                                    android:layout_width="120dp"
+                                    android:layout_height="120dp"
+                                    android:layout_gravity="center"
+                                    app:srcCompat="@drawable/datlichuongthuoc" />
+
+                                <ImageView
+                                    android:layout_weight="1"
+                                    android:layout_width="120dp"
+                                    android:layout_height="120dp"
+                                    android:layout_gravity="center"
+                                    app:srcCompat="@drawable/datlichkham" />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_margin="10dp"
+                                android:layout_weight="3"
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp">
+
+                                <ImageView
+                                    android:layout_weight="1"
+                                    android:layout_width="120dp"
+                                    android:layout_height="120dp"
+                                    android:layout_gravity="center"
+                                    app:srcCompat="@drawable/baohiemyte" />
+
+                                <ImageView
+                                    android:layout_weight="1"
+                                    android:layout_width="120dp"
+                                    android:layout_height="120dp"
+                                    android:layout_gravity="center"
+                                    app:srcCompat="@drawable/datlichuongthuoc" />
+
+                                <ImageView
+                                    android:layout_weight="1"
+                                    android:layout_width="120dp"
+                                    android:layout_height="120dp"
+                                    android:layout_gravity="center"
+                                    app:srcCompat="@drawable/datlichkham" />
+
+                            </LinearLayout>
+                        </LinearLayout>
+
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
@@ -288,30 +380,9 @@
                             <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                               >
+                                >
 
-                                <ImageView
-                                    android:layout_width="120dp"
-                                    android:layout_height="120dp"
-                                    android:layout_gravity="center"
-                                    app:srcCompat="@drawable/hososuckhoe"
 
-                                    />
-                                <ImageView
-                                    android:layout_width="120dp"
-                                    android:layout_height="120dp"
-                                    android:layout_gravity="center"
-                                    app:srcCompat="@drawable/khaibaoyte"
-
-                                    />
-
-                                <ImageView
-                                    android:layout_width="120dp"
-                                    android:layout_height="120dp"
-                                    android:layout_gravity="center"
-                                    app:srcCompat="@drawable/chungnhantiemchung"
-
-                                    />
 
                             </LinearLayout>
 
@@ -328,64 +399,7 @@
                                 android:layout_height="wrap_content"
                                 >
 
-                                <ImageView
-                                    android:layout_width="120dp"
-                                    android:layout_height="120dp"
-                                    android:layout_gravity="center"
-                                    app:srcCompat="@drawable/baohiemyte"
 
-                                    />
-                                <ImageView
-                                    android:layout_width="120dp"
-                                    android:layout_height="120dp"
-                                    android:layout_gravity="center"
-                                    app:srcCompat="@drawable/datlichuongthuoc"
-
-                                    />
-                                <ImageView
-                                    android:layout_width="120dp"
-                                    android:layout_height="120dp"
-                                    android:layout_gravity="center"
-                                    app:srcCompat="@drawable/datlichkham"
-
-                                    />
-
-                            </LinearLayout>
-
-
-                        </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:orientation="vertical">
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                >
-
-                                <ImageView
-                                    android:layout_width="120dp"
-                                    android:layout_height="120dp"
-                                    android:layout_gravity="center"
-                                    app:srcCompat="@drawable/chisosuckhoecuaban"
-
-                                    />
-                                <ImageView
-                                    android:layout_width="120dp"
-                                    android:layout_height="120dp"
-                                    android:layout_gravity="center"
-                                    app:srcCompat="@drawable/taomaqr"
-
-                                    />
-                                <ImageView
-                                    android:layout_width="120dp"
-                                    android:layout_height="120dp"
-                                    android:layout_gravity="center"
-                                    app:srcCompat="@drawable/tuvanbacsi"
-
-                                    />
 
                             </LinearLayout>
 
@@ -435,9 +449,7 @@
                                 android:layout_gravity="center"
                                 app:srcCompat="@drawable/icon_index1"
                                 android:layout_width="90dp"
-                                android:layout_height="90dp"
-
-                                />
+                                android:layout_height="90dp" />
 
 
                         </LinearLayout>
