--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_register.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,22 +7,41 @@
     android:background="@drawable/background_login"
     tools:context=".Register">
 
+    <ImageView
+        android:id="@+id/AppLogoRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_margin="10dp"
+        app:layout_constraintBottom_toTopOf="@id/glregister1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_login" />
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_margin="30dp"
+    <android.support.constraint.Guideline
+        android:id="@+id/glregister1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.20"/>
+
+    <RelativeLayout
+        android:id="@+id/RLRegister"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_margin="20dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/glregister1">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/logo_login" />
 
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true"
             android:orientation="vertical">
 
             <TextView
@@ -38,61 +57,71 @@
                 android:fontFamily="sans-serif-black"
                 android:text="Vui lòng cung cấp thông tin chính xác để chúng tôi cung cấp dịch vụ ngay cho bạn"
                 android:textSize="15dp" />
+
             <EditText
                 android:id="@+id/txt_fullname"
-                android:paddingLeft="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/custom_madicine1"
-                android:hint="FullName"
-                />
+                android:hint="Họ và tên"
+                android:paddingLeft="20dp" />
+
             <EditText
                 android:id="@+id/txt_phonenumber"
-                android:paddingLeft="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/custom_madicine1"
-                android:hint="PhoneNumber"
-                />
+                android:hint="Số điện thoại"
+                android:paddingLeft="20dp" />
 
             <EditText
                 android:id="@+id/txt_password"
-                android:paddingLeft="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginTop="30dp"
+                android:layout_margin="10dp"
                 android:background="@drawable/custom_madicine1"
                 android:hint="Password"
                 android:inputType="textPassword"
-                />
+                android:paddingLeft="20dp" />
+
             <EditText
                 android:id="@+id/txt_confirmpassword"
-                android:paddingLeft="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginTop="30dp"
+                android:layout_margin="10dp"
                 android:background="@drawable/custom_madicine1"
                 android:hint="Confirm Password"
                 android:inputType="textPassword"
-                />
-
-
+                android:paddingLeft="20dp" />
 
 
             <CheckBox
                 android:id="@+id/checkBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Tôi đã đọc và đồng ý với các chính sách và điều khoản của Catus-13" />
+                android:layout_margin="10dp"
+                android:minHeight="48dp"
+                android:text="Tôi đã đọc và đồng ý với các điều khoản và chính sách của Catus-13" />
 
             <LinearLayout
                 android:layout_width="match_parent"
+
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10dp"
                 android:orientation="vertical">
+
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -103,19 +132,46 @@
                     android:textSize="25dp" />
                 />
 
-                <TextView
-                    android:gravity="center"
-                    android:layout_marginLeft="60dp"
-                    android:layout_marginTop="30dp"
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Đã có tài khoản? Đăng Nhập ngay" />
+                    android:paddingTop="10dp">
+
+                    <android.support.constraint.Guideline
+                        android:id="@+id/glregister2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_percent="0.5" />
+
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:text="Đã có tài khoản?"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintRight_toLeftOf="@id/glregister2"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/backtologin"
+                        android:layout_width="wrap_content"
+
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:text="Đăng nhập ngay"
+                        android:textColor="#03A9F4"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@id/glregister2"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </android.support.constraint.ConstraintLayout>
+
             </LinearLayout>
 
 
         </LinearLayout>
 
 
-    </LinearLayout>
-</LinearLayout>
+    </RelativeLayout>
+</android.support.constraint.ConstraintLayout>
