--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_reminder.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_reminder.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:background="@color/green">
 
-
     <LinearLayout
         tools:ignore="MissingConstraints"
         android:orientation="vertical"
@@ -17,55 +16,59 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <LinearLayout
-                android:gravity="center"
-                android:layout_marginTop="20dp"
+
+            <RelativeLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:ignore="MissingConstraints"
-                >
+                android:layout_height="wrap_content">
 
                 <ImageView
-                    android:layout_marginLeft="10dp"
+                    android:id="@+id/Menu_icon"
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_margin="10dp"
                     app:srcCompat="@drawable/menu"
                     android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_height="50dp"/>
 
-                    />
                 <ImageView
-                    android:layout_marginLeft="10dp"
-                    app:srcCompat="@drawable/icon_ellipse"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    />
+                    android:layout_centerInParent="true"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_toRightOf="@id/Menu_icon"
+                    app:srcCompat="@drawable/icon_ellipse" />
+
                 <ImageView
-                    android:layout_marginLeft="200dp"
-                    app:srcCompat="@drawable/userimage"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
+                    android:id="@+id/UserImage"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_margin="10dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerInParent="true"
+                    app:srcCompat="@drawable/userimage" />
 
-                    />
-            </LinearLayout>
-
-            <LinearLayout
-                tools:ignore="MissingConstraints"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
                 <TextView
-                    android:layout_marginLeft="20dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_margin="10dp"
+                    android:paddingLeft="20dp"
+                    android:layout_below="@+id/UserImage"
                     android:fontFamily="sans-serif-black"
                     android:textSize="16dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Xin chào, Nguyễn Văn Hà" />
-            </LinearLayout>
+
+            </RelativeLayout>
+
+
         </LinearLayout>
         <!--phần đầu-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="14dp"
+
             android:background="@drawable/custom_user"
             android:orientation="vertical">
 
@@ -79,24 +82,81 @@
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+
+
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
 
+
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginTop="20dp"
+                            android:layout_margin="10dp"
                             android:fontFamily="sans-serif-black"
                             android:text="Hôm Nay"
                             android:textColor="@color/black"
                             android:textSize="25dp" />
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:background="@drawable/custom_userqr"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="50dp"
+                                android:layout_alignParentLeft="true"
+                                android:layout_centerInParent="true"
+                                android:layout_toLeftOf="@id/LinearLichKham1"
+                                app:srcCompat="@drawable/icon_medicine" />
+
+                            <LinearLayout
+                                android:id="@+id/LinearLichKham1"
+                                android:layout_centerInParent="true"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="10dp"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="sans-serif-black"
+                                    android:text="Lịch hẹn khám"
+                                    android:textColor="@color/black"
+                                    android:textSize="25dp" />
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="8:30 bệnh viện K"
+                                    android:textColor="@color/black"
+                                    android:textSize="15dp" />
+
+                            </LinearLayout>
+
+                            <ImageView
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:layout_margin="10dp"
+                                android:layout_toRightOf="@id/LinearLichKham1"
+                                android:layout_centerInParent="true"
+                                android:layout_alignParentRight="true"
+                                android:layout_weight="1"
+                                app:srcCompat="@drawable/icon_left" />
+
+                        </RelativeLayout>
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="70dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_margin="10dp"
                             android:background="@drawable/custom_userqr"
                             android:orientation="horizontal">
 
@@ -146,7 +206,7 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="70dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_margin="10dp"
                             android:background="@drawable/custom_userqr"
                             android:orientation="horizontal">
 
@@ -196,7 +256,7 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="70dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_margin="10dp"
                             android:background="@drawable/custom_userqr"
                             android:orientation="horizontal">
 
@@ -246,7 +306,7 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="70dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_margin="10dp"
                             android:background="@drawable/custom_userqr"
                             android:orientation="horizontal">
 
@@ -296,7 +356,7 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="70dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_margin="10dp"
                             android:background="@drawable/custom_userqr"
                             android:orientation="horizontal">
 
@@ -344,7 +404,7 @@
 
                         </LinearLayout>
                         <LinearLayout
-                            android:layout_marginTop="20dp"
+                            android:layout_margin="10dp"
                             android:gravity="center"
                             android:orientation="horizontal"
                             android:layout_width="match_parent"
